--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -20,22 +20,28 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/photoIv"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginTop="10dp"
-                android:contentDescription="@string/todo"
-                android:elevation="4dp"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/ic_launcher"
-                app:civ_border_color="#FFFFFF"
-                app:civ_border_width="2dp" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/photoIv"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_margin="5dp"
+                    android:contentDescription="@string/todo"
+                    android:elevation="4dp"
+                    android:scaleType="centerCrop"
+                    android:src="@mipmap/ic_launcher"
+                    app:civ_border_color="#FFFFFF"
+                    app:civ_border_width="2dp" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -88,10 +94,10 @@
                         android:background="@drawable/bg_radius"
                         android:elevation="2dp"
                         android:fontFamily="@font/mnn"
-                        android:padding="10sp"
+                        android:padding="5sp"
                         android:text="@string/loading"
                         android:textColor="@color/black"
-                        android:textSize="14sp"
+                        android:textSize="12sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -101,14 +107,29 @@
                         android:layout_margin="3dp"
                         android:background="@drawable/bg_radius"
                         android:elevation="2dp"
+                        android:textAlignment="center"
+                        android:layout_gravity="center"
                         android:fontFamily="@font/mnn"
-                        android:padding="10sp"
+                        android:padding="5sp"
                         android:text="@string/loading"
                         android:textColor="@color/black"
-                        android:textSize="14sp"
+                        android:textSize="12sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
+
+                <Button
+                    android:id="@+id/btnHtml"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:backgroundTint="#8BC34A"
+                    android:elevation="3dp"
+                    android:fontFamily="@font/mnn"
+                    android:padding="5dp"
+                    android:text="Github"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
@@ -129,20 +150,6 @@
                 android:fontFamily="@font/mnn"
                 android:padding="5dp"
                 android:text="โปรไฟล์"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
-
-            <Button
-                android:id="@+id/btnHtml"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_weight="1"
-                android:backgroundTint="#8BC34A"
-                android:elevation="3dp"
-                android:fontFamily="@font/mnn"
-                android:padding="5dp"
-                android:text="Github"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
