--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="com.nathit.kotlin_retrofit_github.Model" />
-
     </data>
 
     <RelativeLayout
@@ -15,24 +13,18 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-        <TextView
-            android:id="@+id/tvSample"
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:fontFamily="@font/mnn"
-            android:gravity="center"
-            android:hint="@string/loading"
-            android:padding="10dp"
-            android:text="@{viewModel.title}"
-            android:textSize="22sp"
-            android:textStyle="bold" />
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+
+        <!--
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tvSample"
             android:layout_margin="10dp"
             android:orientation="vertical">
 
@@ -98,6 +90,8 @@
                 android:textSize="20sp" />
 
         </LinearLayout>
+
+        -->
 
     </RelativeLayout>
 
