--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,8 +23,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="ผู้ใช้งาน"
-                    android:fontFamily="@font/mnn"
+                    android:text="Member"
                     android:textStyle="bold"
                     android:textSize="18sp"
                     android:textColor="@color/black"/>
