--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -134,7 +134,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:backgroundTint="#8BC34A"
+                            android:backgroundTint="#1C1C1C"
                             android:elevation="3dp"
                             android:text="Github"
                             android:textColor="@color/white"
@@ -157,7 +157,6 @@
                     android:id="@+id/btnProFile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     android:layout_weight="1"
                     android:backgroundTint="#009688"
                     android:elevation="3dp"
@@ -170,7 +169,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:backgroundTint="#009688"
+                    android:backgroundTint="#DF7F08"
                     android:elevation="3dp"
                     android:text="subscribe"
                     android:textColor="@color/white"
