--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,8 +6,6 @@
     android:background="#FAFAFA"
     tools:context=".HomeFragment">
 
-
-
     <RelativeLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
@@ -34,8 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/swipe_refresh_layout"
-            android:layout_below="@+id/toolbar"
-            >
+            android:layout_below="@+id/toolbar">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv"
@@ -43,8 +40,6 @@
                 android:layout_height="match_parent"/>
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-
 
     </RelativeLayout>
 
