--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FAFAFA"
-    tools:context=".EventFragment">
+    tools:context=".Fragment.EventFragment">
 
     <RelativeLayout
         android:id="@+id/container"
