--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FAFAFA"
-    tools:context=".HomeFragment">
+    tools:context=".Fragment.HomeFragment">
 
     <RelativeLayout
         android:id="@+id/container"
