--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="userData"
-            type="com.nathit.kotlin_retrofit_github.UserModel" />
+            type="com.nathit.kotlin_retrofit_github.Model.UserModel" />
     </data>
 
     <RelativeLayout
@@ -87,7 +87,7 @@
                             android:elevation="2dp"
                             android:padding="8sp"
                             android:layout_margin="2dp"
-                            android:text="@string/loading"
+                            android:text="@{userData.login}"
                             android:textColor="@color/black"
                             android:textSize="14sp"
                             android:textStyle="bold" />
@@ -100,7 +100,7 @@
                             android:background="@drawable/bg_radius"
                             android:elevation="2dp"
                             android:padding="5sp"
-                            android:text="@string/loading"
+                            android:text="@{userData.node_id}"
                             android:textColor="@color/black"
                             android:textSize="12sp"
                             android:textStyle="bold" />
@@ -133,8 +133,6 @@
                                 android:text="Github"
                                 android:textColor="@color/white"
                                 android:textSize="10sp" />
-
-
 
                         </LinearLayout>
 
